# docx2everything

./: .gitignore  LICENSE  MANIFEST.in  PUBLISH.md  README.md  pyproject.toml  setup.py
docx2everything/: __init__.py  cli.py  core.py
docx2everything/converters/: __init__.py  markdown_converter.py  text_converter.py
docx2everything/parsers/: __init__.py  chart_parser.py  comment_parser.py  footnote_parser.py  numbering_parser.py  relationship_parser.py  style_parser.py
docx2everything/utils/: __init__.py  file_utils.py  xml_utils.py
